[gd_scene load_steps=6 format=2]

[ext_resource path="res://Audio/Sign.wav" type="AudioStream" id=1]
[ext_resource path="res://Scripts/PassageLocked.gd" type="Script" id=2]
[ext_resource path="res://Fonts/BRADHITC.TTF" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 32, 64 )

[sub_resource type="DynamicFont" id=23]
size = 32
font_data = ExtResource( 3 )

[node name="PassageTwo" type="Area2D"]
light_mask = 2
position = Vector2( 4536, 632 )
script = ExtResource( 2 )
itemname = "Item3"
path = "res://Scenes/Level 2.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 22 )

[node name="Lockedsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="delayTimer" type="Timer" parent="."]
one_shot = true

[node name="lockTimer" type="Timer" parent="."]
one_shot = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 8.0
margin_top = -72.0
margin_right = 120.0
margin_bottom = -24.0
custom_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
bbcode_text = "[fade]locked[/fade]"
text = "locked"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="delayTimer" to="." method="_on_delayTimer_timeout"]
[connection signal="timeout" from="lockTimer" to="." method="_on_lockTimer_timeout"]
